Fix mobile layout issues

--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -43,8 +43,8 @@ section {
     display: none;
     position: fixed;
     bottom: 2rem;
-    left: 50%;
-    transform: translateX(-50%);
+    left: 0%;
+    transform: translateY(-30%);
     z-index: 1000;
     background: rgba($primary, 0.4);
     border-radius: $border-radius;
@@ -55,6 +55,7 @@ section {
 
     @include mobile {
         display: flex;
+        flex-direction: column;
         gap: 1rem;
     }
 }
